--- a/less/uikit/core/base.less
+++ b/less/uikit/core/base.less
@@ -25,7 +25,7 @@
 
 @base-code-color:                               @global-danger-background;
 @base-code-font-size:                           12px;
-@base-code-font-family:                         Menlo,Monaco,Consolas,Courier,monospace;
+@base-code-font-family:                         Menlo,Monaco,Droid Sans Mono,Ubuntu Mono,Consolas,source-code-pro,monospace;
 @base-code-border:                              @global-border;
 @base-code-border-radius:                       @global-border-radius;
 @base-code-padding:                             @global-margin-mini;
@@ -41,18 +41,18 @@
 @base-heading-color:                            @global-color;
 @base-heading-text-transform:                   none;
 @base-heading-margin-top:                       0;
-@base-h1-font-size:                             32px;
-@base-h1-line-height:                           40px;
-@base-h2-font-size:                             24px;
-@base-h2-line-height:                           30px;
-@base-h3-font-size:                             18px;
-@base-h3-line-height:                           24px;
-@base-h4-font-size:                             16px;
-@base-h4-line-height:                           22px;
-@base-h5-font-size:                             14px;
-@base-h5-line-height:                           20px;
-@base-h6-font-size:                             12px;
-@base-h6-line-height:                           18px;
+@base-h1-font-size:                             40px;
+@base-h1-line-height:                           48px;
+@base-h2-font-size:                             32px;
+@base-h2-line-height:                           40px;
+@base-h3-font-size:                             24px;
+@base-h3-line-height:                           32px;
+@base-h4-font-size:                             18px;
+@base-h4-line-height:                           24px;
+@base-h5-font-size:                             16px;
+@base-h5-line-height:                           22px;
+@base-h6-font-size:                             14px;
+@base-h6-line-height:                           20px;
 
 @base-list-padding-left:                        @global-margin-large;
 
