--- a/less/uikit/core/nav.less
+++ b/less/uikit/core/nav.less
@@ -54,7 +54,7 @@
 @nav-side-hover-background:                     transparent;
 @nav-side-hover-color:                          #66b1ff;
 @nav-side-active-background:                    @nav-side-hover-background;
-@nav-side-active-color:                         @nav-side-hover-color;
+@nav-side-active-color:                         @global-primary-background;
 @nav-side-header-color:                         #909399;
 @nav-side-divider-border:                       @global-border;
 @nav-side-divider-border-width:                 1px;
