--- a/less/uikit/core/text.less
+++ b/less/uikit/core/text.less
@@ -119,10 +119,20 @@
     hyphens: auto;
 }
 
+/* Transform modifiers
+ ========================================================================== */
+
+.uk-text-capitalize {
+    text-transform: capitalize !important;
+}
+
+.uk-text-lowercase {
+    text-transform: lowercase !important;
+}
+
+.uk-text-uppercase{
+    text-transform: uppercase !important;
+}
 
 // Hooks
 // ========================================================================
-
-.hook-text-misc;
-
-.hook-text-misc() {}
