--- a/less/uikit/core/utility.less
+++ b/less/uikit/core/utility.less
@@ -674,11 +674,16 @@
 .uk-notouch .uk-hidden-notouch { display: none !important; }
 
 
+/*
+ * Box Shaodw
+ */
+.uk-box-shadow {
+    box-shadow: @global-box-shadow;
+}
+
+
 // Hooks
 // ========================================================================
 
-.hook-utility-misc;
-
 .hook-container() {}
 .hook-scrollable-box() {}
-.hook-utility-misc() {}
