--- a/less/uikit/uikit.less
+++ b/less/uikit/uikit.less
@@ -35,6 +35,7 @@
 @import "core/column.less";
 @import "core/animation.less";
 @import "core/toggle.less";
+@import "core/width.less";
 
 // JavaScript
 @import "core/dropdown.less";
@@ -57,5 +58,6 @@
 @import "./components/search";
 @import "./components/upload";
 @import "./components/progress";
+@import "./components/sticky";
 
 @import "../util/common.less";
