--- a/less/lumi/core/dropdown.less
+++ b/less/lumi/core/dropdown.less
@@ -44,8 +44,8 @@
 @dropdown-divider-border:                       @global-border;
 
 @dropdown-navbar-margin:                        0;
-@dropdown-navbar-background:                    #f5f5f5;
-@dropdown-navbar-color:                         #444;
+@dropdown-navbar-background:                    #ecf5ff;
+@dropdown-navbar-color:                         @global-color;
 @dropdown-navbar-animation:                     uk-slide-top-fixed;
 
 @dropdown-scrollable-height:                    200px;
