--- a/less/lumi/core/close.less
+++ b/less/lumi/core/close.less
@@ -79,8 +79,8 @@
 /* Icon */
 .uk-close:after {
     display: block;
-    content: "\39";
-    font-family: "dripicons-v2";
+    content: "\f114";
+    font-family: "lumi-icons";
 }
 
 /*
