--- a/less/lumi/components/search.less
+++ b/less/lumi/components/search.less
@@ -31,30 +31,31 @@
 
 @search-width:                                  100%;
 @search-height:                                 @global-height;
-@search-border:                                 rgba(0,0,0,0);
-@search-border-width:                           1px;
-@search-background:                             rgba(0,0,0,0);
-@search-color:                                  #444;
-@search-placeholder-color:                      #999;
+@search-border:                                 none;
+@search-background:                             none;
+@search-color:                                  @global-color;
+@search-placeholder-color:                      lighten(@global-color, 10%);
+@search-text-indent:                            20px;
+
+// Search icon
+@search-icon-top:                               2px;
 
 // Dropdown modifier
 @dropdown-search-width:                         300px;
 @dropdown-search-margin-top:                    0;
-@dropdown-search-background:                    #f5f5f5;
-@dropdown-search-color:                         #444;
+@dropdown-search-background:                    @global-muted-color;
+@dropdown-search-color:                         @global-color;
 @dropdown-search-animation:                     uk-slide-top-fixed;
-@dropdown-search-navbar-margin-top:             5px;
-@dropdown-search-navbar-margin-right:           -15px;
+@dropdown-search-navbar-margin-top:             @global-margin-small;
+@dropdown-search-navbar-margin-right:           -@global-margin;
 
 // Nav modifier
-@nav-search-color:                              #444;
-@nav-search-active-background:                  #00a8e6;
-@nav-search-active-color:                       #fff;
-@nav-search-header-color:                       #999;
-@nav-search-divider-border:                     #ddd;
+@nav-search-color:                              @global-color;
+@nav-search-active-background:                  none;
+@nav-search-active-color:                       @global-primary-background;
+@nav-search-header-color:                       @search-placeholder-color;
+@nav-search-divider-border:                     @global-border;
 @nav-search-divider-border-width:               1px;
-@nav-search-nested-color:                       #07D;
-@nav-search-nested-hover-color:                 #059;
 
 
 /* ========================================================================
@@ -130,12 +131,12 @@
     /* 6 */
     width: @search-width;
     height: @search-height;
-    border: @search-border-width solid @search-border;
+    border: @search-border;
     background: @search-background;
     -webkit-transition: all linear 0.2s;
     transition: all linear 0.2s;
     vertical-align: middle;
-    text-indent: 24px;
+    text-indent: @search-text-indent;
     .hook-search-field;
 }
 
@@ -143,6 +144,7 @@
 .uk-search-field:-ms-input-placeholder { color: @search-placeholder-color !important; }
 .uk-search-field::-moz-placeholder { color: @search-placeholder-color; }
 .uk-search-field::-webkit-input-placeholder { color: @search-placeholder-color; }
+.uk-search-field::placeholder { color: @search-placeholder-color; }
 
 /* Focus */
 .uk-search-field:focus {
@@ -153,7 +155,7 @@
 .uk-search-icon {
     position: absolute;
     pointer-events: none;
-    top: 10px;
+    top: @search-icon-top;
 }
 
 /* Dropdown modifier: `uk-dropdown-search`
@@ -224,13 +226,6 @@
     border-top: @nav-search-divider-border-width solid @nav-search-divider-border;
     .hook-nav-search-divider;
 }
-
-/*
- * Nested items
- */
-
-.uk-nav-search ul a { color: @nav-search-nested-color; }
-.uk-nav-search ul a:hover { color: @nav-search-nested-hover-color; }
 
 // Hooks
 // ========================================================================
