fix modal layout

--- a/less/lumi/core/modal.less
+++ b/less/lumi/core/modal.less
@@ -284,12 +284,12 @@
  ========================================================================== */
 
 .uk-modal-header {
-    margin: 0 -@modal-dialog-padding @modal-header-margin-bottom;
+    margin: -@modal-dialog-padding -@modal-dialog-padding @modal-header-margin-bottom;
     .hook-modal-header;
 }
 
 .uk-modal-footer {
-    margin: @modal-footer-margin-top -@modal-dialog-padding 0;
+    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding;
     .hook-modal-footer;
 }
 
