--- a/less/lumi/core/nav.less
+++ b/less/lumi/core/nav.less
@@ -36,7 +36,7 @@
 // Variables
 // ========================================================================
 
-@nav-padding-vertical:                          @global-margin-mini;
+@nav-padding-vertical:                          6px;
 @nav-padding-horizontal:                        20px;
 
 @nav-header-padding-vertical:                   @nav-padding-vertical;
