--- a/less/lumi/core/breadcrumb.less
+++ b/less/lumi/core/breadcrumb.less
@@ -27,7 +27,6 @@
 @breadcrumb-disabled-color:                     #999;
 
 @breadcrumb-color:                              #c0c4cc;
-@breadcrumb-font-weight:                        500;
 
 /* ========================================================================
    Component: Breadcrumb
@@ -87,9 +86,7 @@
 
 .hook-breadcrumb-misc;
 
-.hook-breadcrumb() {
-    font-weight: @breadcrumb-font-weight;
-}
+.hook-breadcrumb() {}
 .hook-breadcrumb-divider() {
     color: @breadcrumb-color;
 }
