--- a/less/lumi/core/tab.less
+++ b/less/lumi/core/tab.less
@@ -90,8 +90,9 @@
  */
 
 .uk-tab > * > a {
-    /* 1 */
     display: block;
+    box-sizing: border-box;
+    /* 1 */
     text-align: center;
     /* 2 */
     padding: @tab-item-padding-vertical @tab-item-padding-horizontal;
