add more stylish active list item style

--- a/less/lumi/core/modal.less
+++ b/less/lumi/core/modal.less
@@ -289,7 +289,7 @@
 }
 
 .uk-modal-footer {
-    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding;
+    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding/2;
     .hook-modal-footer;
 }
 
