change modal margins

--- a/less/lumi/core/modal.less
+++ b/less/lumi/core/modal.less
@@ -48,9 +48,9 @@
 @modal-dialog-large-width-large:                920px;
 @modal-dialog-border-rounded:                   @global-border-radius;
 
-@modal-header-margin-bottom:                    @global-margin;
+@modal-header-margin-bottom:                    0;
 
-@modal-footer-margin-top:                       @global-margin;
+@modal-footer-margin-top:                       0;
 
 @modal-caption-margin-bottom:                   -@global-margin-small;
 @modal-caption-color:                           #fff;
