--- a/less/lumi/core/variables.less
+++ b/less/lumi/core/variables.less
@@ -54,6 +54,7 @@
 
 @global-background:                             #fff;
 @global-border:                                 #ebeef5;
+@global-dark-border:                            #49545f;
 @global-border-radius:                          4px;
 
 @global-default-background:                     #fff;
