--- a/less/lumi/core/nav.less
+++ b/less/lumi/core/nav.less
@@ -50,14 +50,14 @@
 @nav-divider-margin-horizontal:                 @nav-padding-horizontal;
 
 @nav-side-color:                                #5e6d82;
-@nav-side-dark-color:                           #ccc;
+@nav-side-dark-color:                           #b9bbc1;
 @nav-side-hover-background:                     transparent;
 @nav-side-hover-color:                          @nav-side-color;
 @nav-side-hover-dark-color:                     @nav-side-dark-color;
 @nav-side-active-color:                         @global-primary-background;
 @nav-side-active-dark-color:                    #fff;
 @nav-side-active-border-color:                  @tab-item-active-color;
-@nav-side-active-dark-border-color:                  @tab-item-active-dark-color;
+@nav-side-active-dark-border-color:             @tab-item-active-dark-color;
 @nav-side-header-color:                         #909399;
 @nav-side-divider-border:                       @global-border;
 @nav-side-divider-dark-border:                  @global-dark-border;
@@ -65,7 +65,7 @@
 
 @nav-dropdown-color:                            #606266;
 @nav-dropdown-hover-background:                 #ecf5ff;
-@nav-dropdown-hover-dark-background:            #323b44;
+@nav-dropdown-hover-dark-background:            #1f3042;
 @nav-dropdown-hover-color:                      @nav-side-active-color;
 @nav-dropdown-hover-dark-color:                 @nav-side-active-dark-color;
 @nav-dropdown-header-color:                     @nav-side-header-color;
