--- a/less/lumi/core/offcanvas.less
+++ b/less/lumi/core/offcanvas.less
@@ -32,7 +32,7 @@
 @offcanvas-bar-width:                           270px;
 @offcanvas-bar-shadow:                          0 5px 10px rgba(0,0,0,0.15);
 @offcanvas-bar-background:                      #fff;
-@offcanvas-bar-dark-background:                 #2e343c;
+@offcanvas-bar-dark-background:                 #232c35;
 
 
 /* ========================================================================
