--- a/less/lumi/core/variables.less
+++ b/less/lumi/core/variables.less
@@ -36,6 +36,7 @@
 //
 
 @global-color:                                  #606266;
+@global-dark-color:                             #aaacb3;
 @global-muted-color:                            #f9fafc;
 @global-text-shadow:                            #fff;
 
