--- a/less/lumi/core/dropdown.less
+++ b/less/lumi/core/dropdown.less
@@ -45,7 +45,7 @@
 
 @dropdown-navbar-margin:                        0;
 @dropdown-navbar-background:                    #ecf5ff;
-@dropdown-navbar-dark-background:               #37414a;
+@dropdown-navbar-dark-background:               #2b3946;
 @dropdown-navbar-color:                         @global-color;
 @dropdown-navbar-animation:                     uk-slide-top-fixed;
 
