--- a/less/lumi/core/variables.less
+++ b/less/lumi/core/variables.less
@@ -40,7 +40,7 @@
 @global-muted-color:                            #f9fafc;
 @global-text-shadow:                            #fff;
 
-@global-link-color:                             #606266;
+@global-link-color:                             #409eff;
 @global-link-hover-color:                       #409eff;
 
 @global-contrast-color:                         #fff;
